// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessRequestCatalog Component displays pagination if more than 10 results: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (15)",
    "
",
    " at <Pagination",
    "key=2",
    "value=1",
    "per-page=10",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=11",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (10)",
    "
",
    " at <BDropdownItem",
    "data-testid="page_size-10"",
    "key=0",
    "active=true",
    " ...",
    ">",
    "
",
    " at <BDropdown",
    "key=0",
    "data-testid="page_size-button"",
    "class="mr-1 pagination-dropdown"",
    " ...",
    ">",
    "
",
    " at <Pagination",
    "key=2",
    "value=1",
    "per-page=10",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=11",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (6)",
    "
",
    " at <BDropdownItem",
    "data-testid="page_size-10"",
    "key=0",
    "active=true",
    " ...",
    ">",
    "
",
    " at <BDropdown",
    "key=0",
    "data-testid="page_size-button"",
    "class="mr-1 pagination-dropdown"",
    " ...",
    ">",
    "
",
    " at <Pagination",
    "key=2",
    "value=1",
    "per-page=10",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=11",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (16)",
    "
",
    " at <BDropdownItem",
    "data-testid="page_size-10"",
    "key=0",
    "active=true",
    " ...",
    ">",
    "
",
    " at <BDropdown",
    "key=0",
    "data-testid="page_size-button"",
    "class="mr-1 pagination-dropdown"",
    " ...",
    ">",
    "
",
    " at <Pagination",
    "key=2",
    "value=1",
    "per-page=10",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=11",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (11)",
    "
",
    " at <BPagination",
    "class="m-0 pagination-buttons"",
    "id="pagination"",
    "tabindex="0"",
    " ...",
    ">",
    "
",
    " at <Pagination",
    "key=2",
    "value=1",
    "per-page=10",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=11",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (7)",
    "
",
    " at <BPagination",
    "class="m-0 pagination-buttons"",
    "id="pagination"",
    "tabindex="0"",
    " ...",
    ">",
    "
",
    " at <Pagination",
    "key=2",
    "value=1",
    "per-page=10",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=11",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`AccessRequestCatalog Component displays total count in singular: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (2)",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BContainer> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (3)",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) \`beforeDestroy\` has been renamed to \`beforeUnmount\`.",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) vm.$scopedSlots has been removed. Use vm.$slots instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/slots-unification.html",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (2)",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (3)",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (2)",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (4)",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (3)",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "appear" with v-bind value \`false\` will render appear="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "persisted" with v-bind value \`false\` will render persisted="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=0",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (4)",
    "
",
    " at <BModal",
    "id="filterModal"",
    "no-close-on-backdrop=""",
    "no-close-on-esc=""",
    " ...",
    ">",
    "
",
    " at <Form",
    "as="span"",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (3)",
    "
",
    " at <BModal",
    "id="filterModal"",
    "no-close-on-backdrop=""",
    "no-close-on-esc=""",
    " ...",
    ">",
    "
",
    " at <Form",
    "as="span"",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (5)",
    "
",
    " at <ItemDetailsModal",
    "glossary-schema=undefined",
    "item=",
    {},
    "item-type="application"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) vm.$on/$once/$off() have been removed. Use an external event emitter library instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/events-api.html",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (5)",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (2)",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (6)",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (6)",
    "
",
    " at <BLink",
    "class="nav-link active"",
    "onClick=fn<bound handleEvent>",
    "onKeydown=fn<bound handleEvent>",
    " ...",
    ">",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) Detected conflicting key "bvListeners" when merging data option values. In Vue 3, data keys are merged shallowly and will override one another.
  Details: https://v3-migration.vuejs.org/breaking-changes/data-option.html#mixin-merge-behavior-change",
    "
",
    " at <BLink",
    "class="nav-link active"",
    "onClick=fn<bound handleEvent>",
    "onKeydown=fn<bound handleEvent>",
    " ...",
    ">",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (4)",
    "
",
    " at <BLink",
    "class="nav-link active"",
    "onClick=fn<bound handleEvent>",
    "onKeydown=fn<bound handleEvent>",
    " ...",
    ">",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (4)",
    "
",
    " at <BLink",
    "class="nav-link active"",
    "onClick=fn<bound handleEvent>",
    "onKeydown=fn<bound handleEvent>",
    " ...",
    ">",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (3)",
    "
",
    " at <BLink",
    "class="nav-link active"",
    "onClick=fn<bound handleEvent>",
    "onKeydown=fn<bound handleEvent>",
    " ...",
    ">",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BLink> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BLink",
    "class="nav-link active"",
    "onClick=fn<bound handleEvent>",
    "onKeydown=fn<bound handleEvent>",
    " ...",
    ">",
    "
",
    " at <BVTabButton",
    "onClick=fn",
    "onFirst=fn<bound firstTab>",
    "onPrev=fn<bound previousTab>",
    " ...",
    ">",
    "
",
    " at <BNav",
    "class=""",
    "ref="nav"",
    "role="tablist"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (7)",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (4)",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) v-model usage on component has changed in Vue 3. Component that expects to work with v-model should now use the "modelValue" prop and emit the "update:modelValue" event. You can update the usage and then opt-in to Vue 3 behavior on a per-component basis with \`compatConfig: { COMPONENT_V_MODEL: false }\`.
  Details: https://v3-migration.vuejs.org/breaking-changes/v-model.html",
    "
",
    " at <SearchInput",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "class="flex-grow-1"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (7)",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (4)",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (5)",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (2)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search application"",
    "aria-label="Search application"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (6)",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (8)",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (5)",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (7)",
    "
",
    " at <BInputGroupAddon",
    "id=undefined",
    "isText=false",
    "tag="div"",
    " ...",
    ">",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (8)",
    "
",
    " at <BInputGroupText",
    "class="border-0"",
    ">",
    "
",
    " at <BInputGroupAddon",
    "id=undefined",
    "isText=false",
    "tag="div"",
    " ...",
    ">",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (8)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search application"",
    "aria-label="Search application"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (2)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search application"",
    "aria-label="Search application"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (9)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search application"",
    "aria-label="Search application"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (5)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search application"",
    "aria-label="Search application"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "aria-invalid" with v-bind value \`false\` will render aria-invalid="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search application"",
    "aria-label="Search application"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "class="flex-grow-1"",
    "placeholder="Search application"",
    "onSearch=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (10)",
    "
",
    " at <BButton",
    "class="ml-3"",
    "pill=""",
    "variant="outline-primary"",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="pb-3 pt-0 px-0 justify-content-between border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (9)",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (9)",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (6)",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (5)",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (10)",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (6)",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (7)",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (11)",
    "
",
    " at <BDropdownText",
    "style=",
    {
      "width": "250px",
    },
    ">",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (12)",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (3)",
    "
",
    " at <FrField",
    "modelValue="application.name"",
    "onUpdate:modelValue=fn",
    "class="mb-2"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (11)",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (8)",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (13)",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "ref="form"",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (14)",
    "
",
    " at <FrField",
    "class="mb-2"",
    "name="sortField"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "ref="form"",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (4)",
    "
",
    " at <SelectInput",
    "name="sortField"",
    "type="select"",
    "options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="mb-2"",
    "name="sortField"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "ref="form"",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (5)",
    "
",
    " at <VueMultiselect",
    "id="floatingLabelInput46"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput46"",
    "name="sortField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "name="sortField"",
    "type="select"",
    "options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="mb-2"",
    "name="sortField"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "ref="form"",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_ENUMERATED_COERCION) Enumerated attribute "spellcheck" with v-bind value \`false\` will render the value as-is instead of coercing the value to "true" in Vue 3. Always use explicit "true" or "false" values for enumerated attributes. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_ENUMERATED_COERCION: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <VueMultiselect",
    "id="floatingLabelInput46"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput46"",
    "name="sortField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "name="sortField"",
    "type="select"",
    "options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "class="mb-2"",
    "name="sortField"",
    "type="select"",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "ref="form"",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "disabled" with v-bind value \`false\` will render disabled="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "ref="form"",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BDropdownForm>",
    "
",
    " at <BDropdown",
    "id="sortBy"",
    "toggle-class="text-dark px-0 d-flex"",
    "variant="link"",
    ">",
    "
",
    " at <SortDropdown",
    "selected-item="application.name"",
    "sort-by-options=",
    [
      {
        "text": "Application Name",
        "value": "application.name",
      },
      {
        "text": "Application Owner",
        "value": "applicationOwner.userName",
      },
    ],
    "onSortFieldChange=fn",
    " ...",
    ">",
    "
",
    " at <BButtonToolbar",
    "class="p-0 mb-1 justify-content-between align-items-center border-0"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (15)",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (16)",
    "
",
    " at <BCardBody",
    "class="d-flex"",
    ">",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (17)",
    "
",
    " at <BMedia",
    "body-class="overflow-hidden"",
    "class="overflow-hidden"",
    ">",
    "
",
    " at <BCardBody",
    "class="d-flex"",
    ">",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (12)",
    "
",
    " at <BMedia",
    "body-class="overflow-hidden"",
    "class="overflow-hidden"",
    ">",
    "
",
    " at <BCardBody",
    "class="d-flex"",
    ">",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (9)",
    "
",
    " at <BMedia",
    "body-class="overflow-hidden"",
    "class="overflow-hidden"",
    ">",
    "
",
    " at <BCardBody",
    "class="d-flex"",
    ">",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (18)",
    "
",
    " at <BMediaBody>",
    "
",
    " at <BMedia",
    "body-class="overflow-hidden"",
    "class="overflow-hidden"",
    ">",
    "
",
    " at <BCardBody",
    "class="d-flex"",
    ">",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (19)",
    "
",
    " at <BImg",
    "key=0",
    "height="28"",
    "class="mb-3"",
    " ...",
    ">",
    "
",
    " at <BMediaBody>",
    "
",
    " at <BMedia",
    "body-class="overflow-hidden"",
    "class="overflow-hidden"",
    ">",
    "
",
    " at <BCardBody",
    "class="d-flex"",
    ">",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (20)",
    "
",
    " at <BCardFooter",
    "class="border-0 pt-0 d-flex justify-content-end"",
    ">",
    "
",
    " at <BCard",
    "class="h-100 shadow-none cursor-pointer hover-blue-border"",
    "no-body=""",
    "role="button"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "key=0",
    "cols="12"",
    "lg="6"",
    " ...",
    ">",
    "
",
    " at <BRow",
    "key=1",
    "id="applicationGrid"",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "catalogItems=",
    [
      {},
    ],
    "totalCount=1",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`AccessRequestCatalog Component does not display pagination if equal to or less than 10 results: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (13)",
    "
",
    " at <NoData",
    "key=1",
    "class="mt-5 border-0 shadow-none"",
    "icon="apps"",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "totalCount=10",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (10)",
    "
",
    " at <NoData",
    "key=1",
    "class="mt-5 border-0 shadow-none"",
    "icon="apps"",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "totalCount=10",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (14)",
    "
",
    " at <BCard",
    "key=0",
    "body-class=""",
    "class="mt-5 border-0 shadow-none"",
    " ...",
    ">",
    "
",
    " at <NoData",
    "key=1",
    "class="mt-5 border-0 shadow-none"",
    "icon="apps"",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "totalCount=10",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (11)",
    "
",
    " at <BCard",
    "key=0",
    "body-class=""",
    "class="mt-5 border-0 shadow-none"",
    " ...",
    ">",
    "
",
    " at <NoData",
    "key=1",
    "class="mt-5 border-0 shadow-none"",
    "icon="apps"",
    " ...",
    ">",
    "
",
    " at <Transition",
    "class="p-0"",
    "style=",
    {},
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "mode="out-in"",
    "noFade=false",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTab",
    "key="application"",
    "class="p-0"",
    "data-testid="tab-application"",
    " ...",
    ">",
    "
",
    " at <BTabs",
    "value=2",
    "class="my-4"",
    "content-class="mt-4"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="my-5"",
    ">",
    "
",
    " at <AccessRequestCatalog",
    "loading=false",
    "totalCount=10",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
